<resources>
    <string name="app_name">TravelHop</string>
    <string name="log_in">Sign In</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="full_name_hint">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_acc">Already have an account?</string>
    <string name="dont_have_acc">Don\'t have an account?</string>
    <string name="caption_hint">Caption</string>
    <string name="location_hint">Location</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="change_profile_picture">Change photo</string>
    <string name="search_users_input">Search</string>
    <string name="sign_out_all_caps">SIGN OUT</string>
    <string name="following_status">Following</string>
    <string name="not_following_status">Not Following</string>
    <string name="propose_follow">Follow</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
