<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cilic.zlatan.travelhop.AuthActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp"
    android:id="@+id/rootAuthActivity"
    android:clickable="true"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:id="@+id/sign_in_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_constraintDimensionRatio="w,10:16"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <ImageView
            android:id="@+id/logo_auth_page"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_above="@+id/email_edittext"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:src="@drawable/logo_letters" />

        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/password_edittext"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/edit_text_back"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="17sp"
            android:fontFamily="sans-serif"
            android:nextFocusDown="@+id/password_edittext"/>

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/edit_text_back"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="17sp"
            android:fontFamily="sans-serif"/>

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_edittext"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/login_button"
            android:text="@string/log_in"
            android:textColor="#97bdd9" />

        <View
            android:id="@+id/line_separator_sign_in"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@+id/bottom_layout_auth"
            android:background="@android:color/darker_gray" />

        <RelativeLayout
            android:id="@+id/bottom_layout_auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp">

                <TextView
                    android:layout_column="0"
                    android:layout_marginEnd="3dp"
                    android:layout_row="0"
                    android:text="@string/dont_have_acc" />

                <TextView
                    android:id="@+id/sign_up_textview"
                    android:layout_column="1"
                    android:layout_marginStart="3dp"
                    android:layout_row="0"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorPrimary" />
            </GridLayout>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sign_up_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_constraintDimensionRatio="w,10:16"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_above="@+id/email_signup_edittext"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:src="@drawable/logo_letters" />

        <EditText
            android:id="@+id/email_signup_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/password_signup_edittext"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/edit_text_back"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="17sp"
            android:fontFamily="sans-serif"
            android:nextFocusDown="@+id/password_signup_edittext"/>

        <EditText
            android:id="@+id/password_signup_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/edit_text_back"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="17sp"
            android:fontFamily="sans-serif"
            android:nextFocusDown="@+id/full_name_signup_edittext"/>

        <EditText
            android:id="@+id/full_name_signup_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_signup_edittext"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/edit_text_back"
            android:hint="@string/full_name_hint"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="17sp"
            android:fontFamily="sans-serif"
            android:nextFocusDown="@+id/username_signup_edittext"/>

        <EditText
            android:id="@+id/username_signup_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/full_name_signup_edittext"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/edit_text_back"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="17sp"
            android:fontFamily="sans-serif"/>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username_signup_edittext"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/login_button"
            android:text="@string/sign_up"
            android:textColor="#97bdd9" />

        <View
            android:id="@+id/line_separator_sign_up"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@+id/bottom_layout_sign_up_auth"
            android:background="@android:color/darker_gray" />

        <RelativeLayout
            android:id="@+id/bottom_layout_sign_up_auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp">

                <TextView
                    android:layout_column="0"
                    android:layout_marginEnd="3dp"
                    android:layout_row="0"
                    android:text="@string/already_have_acc" />

                <TextView
                    android:id="@+id/sign_in_textview"
                    android:layout_column="1"
                    android:layout_marginStart="3dp"
                    android:layout_row="0"
                    android:text="@string/log_in"
                    android:textColor="@color/colorPrimary" />
            </GridLayout>
        </RelativeLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
